--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.3",
-    "react-slick": "^0.30.1",
-    "slick-carousel": "^1.8.1"
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
