Se modifica el componente de projects para poder cargar la informacion de acuerdo al idioma en que se encuentra la aplicacion, asi mismo, se modifico el json para ingresar la informacion en ambos idiomas y asi llamar el requerido 'en el que se encuentra la app'. Ademas se modifica navbar y app para pasar la prop correspondiente que permita realizar dicho cambio

--- a/src/components/molecules/Projects/Projects.json
+++ b/src/components/molecules/Projects/Projects.json
@@ -1,21 +1,42 @@
-[
+{
+  "es": [
     {
       "id": 1,
       "title": "Master Task",
-      "image": "URL de la imagen 1",
-      "text": "Descripción del proyecto 1"
+      "image": "../../../assets/Projects/Todo.png",
+      "text": "Una aplicación de notas que te permite crear un usuario, gestionar información y realizar diversas acciones con las notas, como crear, editar, eliminar o simplemente visualizarlas"
     },
     {
       "id": 2,
       "title": "CRM ZTechnology",
-      "image": "URL de la imagen 2",
-      "text": "Descripción del proyecto 2"
+      "image": "../../../assets/Projects/",
+      "text": "Una aplicación que incluye funciones para la gestión de empleados y roles, así como la gestión de productos, clientes y cotizaciones. Permite realizar acciones como crear, editar, eliminar o simplemente visualizar información relacionada con cada uno de estos aspectos."
     },
     {
       "id": 3,
       "title": "Portafolio",
-      "image": "URL de la imagen 3",
-      "text": "Descripción del proyecto 3"
+      "image": "../../../assets/Projects/",
+      "text": "Este proyecto es mi portafolio personal, el cual estás viendo en este momento. Aquí encontrarás mi información profesional, detalles sobre mí y todas las tecnologías que domino, así como información sobre todos mis proyectos."
+    }
+  ],
+  "en": [
+    {
+      "id": 1,
+      "title": "Master Task",
+      "image": "../../../assets/Projects/Todo.png",
+      "text": "A notes application that allows you to create a user, manage information and perform various actions with the notes, such as creating, editing, deleting or simply viewing them."
+    },
+    {
+      "id": 2,
+      "title": "CRM ZTechnology",
+      "image": "../../../assets/Projects/",
+      "text": "An application that includes functions for the management of employees and roles, as well as the management of products, customers and quotations. It allows actions such as creating, editing, deleting or simply viewing information related to each of these aspects."
+    },
+    {
+      "id": 3,
+      "title": "Portfolio",
+      "image": "../../../assets/Projects/",
+      "text": "This project is my personal portfolio, which you are currently viewing. Here you will find my professional information, details about me and all the technologies I master, as well as information about all my projects."
     }
   ]
-  
+}
